--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,6 @@
         "ecmaVersion": 2018
     },
     "rules": {
-        "prettier/prettier": "error"
+        "prettier/prettier": ["error", { "singleQuote": true }]
     }
 }
